@@ -3270,6 +3270,66 @@ public:
 };
 
 
+
+/**
+    @class wxDPIChangedEvent
+
+    A DPI-changed event is sent when the dots-per-inch (DPI) of the monitor
+    a wxTopLevelWindow is on changes.
+    The event is send to the wxTopLevelWindow, and all its children.
+
+    The event is only generated when the application is Per-Monitor DPI-Aware,
+    and is currently only generated by wxMSW port.
+
+    @beginEventTable{wxDPIChangedEvent}
+    @event{EVT_DPI_CHANGED(func)}
+        Process a @c wxEVT_DPI_CHANGED event.
+    @endEventTable
+
+    @onlyfor{wxmsw}
+
+    @library{wxcore}
+    @category{events}
+
+    @see @ref overview_events
+*/
+class wxDPIChangedEvent : public wxEvent
+{
+public:
+    /**
+        Constructor.
+    */
+    wxDPIChangedEvent();
+
+    /**
+        Sets the old DPI.
+
+    @param oldDPI
+        The old DPI.
+    */
+    void SetOldDPI(wxSize const oldDPI);
+
+    /**
+        Returns the old DPI.
+    */
+    wxSize GetOldDPI() const;
+
+    /**
+        Sets the new DPI.
+
+    @param newDPI
+        The new DPI.
+    */
+    void SetNewDPI(wxSize const newDPI);
+
+    /**
+        Returns the new DPI.
+    */
+    wxSize GetNewDPI() const;
+};
+
+
+
 class wxPaletteChangedEvent : public wxEvent
 {
 public:
