@@ -318,6 +318,7 @@ wxMSW:
 - Fix crash when reparenting the currently focused window to another TLW.
 - Fix sending wxEVT_TEXT_ENTER when using auto-completion (Dubby).
 - Fix missing selection event on click in multiselection wxDataViewCtrl (mikek).
+- Add support for Per-Monitor DPI-Awareness (Maarten Bent).
 
 wxOSX:
 
